--- a/platformer/index.html
+++ b/platformer/index.html
@@ -1,6 +1,8 @@
 <head>
 	<body>
-		<p style="position: absolute; top: 10px; left: 10px; width: calc(100% - 20px); text-align: center;">hey, there's a <a href="/platformer/v0.2 PUBLIC TEST 2/">2nd public test</a> avaliable!</p>
-		<p style="position: absolute; left: 5px; top: 50px"><a href="/platformer/v0.1/">v0.1</a></p>
+		<p style="position: absolute; top: 10px; left: 10px; width: calc(100% - 20px); text-align: center;">this project has been put on hold. <a href="/platformer/platformer v0.3 dev/">here is the development version</a>. have fun?</p>
+		<p style="position: absolute; left: 5px; top: 50px"><a href="/platformer/platformer v0.2b/">v0.2b</a></p>
+		<p style="position: absolute; left: 5px; top: 75px"><a href="/platformer/platformer v0.2a/">v0.2a</a></p>
+		<p style="position: absolute; left: 5px; top: 100px"><a href="/platformer/v0.1/">v0.1</a></p>
 	</body>
 </head>
