--- a/dvd/transparent.html
+++ b/dvd/transparent.html
@@ -157,10 +157,10 @@ function rightwall() {
         }
     }
     function reportWindowSize() {
-    luigix = (((window.innerWidth)/2)-50);
-    luigiy = (((window.innerHeight)/2)-37);
-    luigixdir=1
-    luigiydir=-1
+    //luigix = (((window.innerWidth)/2)-50);
+    //luigiy = (((window.innerHeight)/2)-37);
+    //luigixdir=1
+    //luigiydir=-1
     //console.log("resized to ("+luigix+"x"+luigiy+")")
     }
     window.addEventListener("resize", reportWindowSize);
