--- a/dvd/transparent.html
+++ b/dvd/transparent.html
@@ -27,6 +27,7 @@ luigiydir=(Math.random() * 2)
 if (luigiydir==0){
 luigiydir=-1
 }
+colorchange=Math.floor((Math.random() * 89)*4);
 var luigi = setInterval(function(){
 leftwall()
 rightwall()
