--- a/bee/index.html
+++ b/bee/index.html
@@ -17,9 +17,9 @@
   66.666%{color:#FFFF00}
   83.333%{color:#00FF00}
   100%{color:#00FFFF}
-}</style><body style="animation-name: rainbowback; animation-duration: 60s;animation-iteration-count: 999999999;">
+}</style><body style="animation-name: rainbowback; animation-duration: 60s;animation-iteration-count: 999999999;animation-timing-function: linear;">
 <div id="timerthing" style="transform: radius(45deg);background-color: transparent;height: 70px;width: 110px;overflow: hidden;position:absolute"><div style="background-color: #000000;height: 20px;width: 110px;border-radius: 45px;position: absolute;top: 0px;left: 0px;color:#FFFFFF;text-align: center;"><b style="position: absolute;left: 2px;top: -7px;color:#FFFFFF;font-size: 24px;" id="selleft">🠜</b><a style="text-align: center;" id="selname">Rainbow</a><b style="position: absolute;right: 2px;top: -7px;color:#FFFFFF;font-size: 24px;" id="selright">🠞</b></div><div style="background-color: #000000;height: 50px;width: 110px;border-radius: 45px;left: 0px;position: absolute;top: 20px;"><b style="position: absolute;left: 2px;top: 7px;color:#FFFFFF;font-size: 24px;" id="valleft">🠜</b><b style="position: absolute;left: 34px;top: 10px;width: 45px;height: 22px;color:#FFFFFF;font-size: 24px;" id="valval">999s</b><b style="position: absolute;right: 2px;top: 7px;color:#FFFFFF;font-size: 24px;" id="valright">🠞</b></div></div>
-<marquee id="marquee" style="animation-name: rainbowcolor; animation-duration: 60s; white-space: pre;text-align: center;width: 100%; height: 27260px; position: absolute;left: 0px;bottom: 0px;animation-iteration-count: 999999999;" direction="up">According to all known laws of aviation, there is no way a bee should be able to fly.
+<marquee id="marquee" style="animation-name: rainbowcolor; animation-duration: 60s;animation-timing-function: linear; white-space: pre;text-align: center;width: 100%; height: 27260px; position: absolute;left: 0px;bottom: 0px;animation-iteration-count: 999999999;" direction="up">According to all known laws of aviation, there is no way a bee should be able to fly.
 Its wings are too small to get its fat little body off the ground.
 The bee, of course, flies anyway because bees don't care what humans think is impossible.
 Yellow, black. Yellow, black. Yellow, black. Yellow, black.
@@ -1432,8 +1432,8 @@ document.getElementById("valleft").style.color="#888888"
 document.getElementById("valleft").style.color="#FFFFFF"
 }
 }
-document.body.style="animation-name: rainbowback; animation-duration: "+timer+"s; animation-iteration-count: 999999999;"
-document.getElementById("marquee").style="animation-name: rainbowcolor; animation-duration: "+timer+"s; white-space: pre;text-align: center;width: 100%;height:27260px;position: absolute;left: 0px;bottom: 0px; animation-iteration-count: 999999999;"
+document.body.style="animation-name: rainbowback; animation-duration: "+timer+"s; animation-iteration-count: 999999999;animation-timing-function: linear;"
+document.getElementById("marquee").style="animation-name: rainbowcolor; animation-duration: "+timer+"s; animation-timing-function: linear; white-space: pre;text-align: center;width: 100%;height:27260px;position: absolute;left: 0px;bottom: 0px; animation-iteration-count: 999999999;"
 document.getElementById("marquee").scrollAmount=speed
 fade=2
 }
