--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
 <p style="position: absolute; left: 5px; top: 10px">this is my website</p>
 <p style="position: absolute; left: 5px; top: 40px">list of stuff:</p>
 <p style="position: absolute; left: 5px; top: 80px"><a href="/mario/index.html">Mario steals your liver (IE11, uses popups)</a></p>
-<p style="position: absolute; left: 5px; top: 120px"><a href="/dragon/index.html">dragon</a></p>
-<p style="position: absolute; left: 5px; top: 160px"><a href="/pressing/index.html">pressing (doesn't save yet)</a></p>
-<p style="position: absolute; left: 5px; top: 200px"><a href="/blog page/index.html">blog page</a></p>
-<p style="position: absolute; left: 5px; top: 240px"><a href="/Encourage/">get encouraged!</a></p>
-<p style="position: absolute; left: 5px; top: 280px"><a href="/presentin/">presenting time</a></p>
-<p style="position: absolute; left: 5px; top: 320px"><a href="/presentation/">unfinished presenting thing.</a></p>
-<p style="position: absolute; left: 5px; top: 360px"><a href="/Edit+/">Edit+ Playground!</a></p>
-<p style="position: absolute; left: 5px; top: 400px"><a href="/platformer/">platformer test v0.1</a></p>
-<p style="position: absolute; left: 5px; top: 440px"><a href="/">more coming soon... this is getting fuller and fuller!</a></p>
+<p style="position: absolute; left: 5px; top: 120px"><a href="/Edit+/">Edit+ Playground!</a></p>
+<p style="position: absolute; left: 5px; top: 160px"><a href="/musicreaction/">musicreaction</a></p>
+<p style="position: absolute; left: 5px; top: 200px"><a href="/">more coming soon...</a></p>
 </body>
 </html>
