--- a/musicreaction/index.html
+++ b/musicreaction/index.html
@@ -66,7 +66,7 @@ fetch("music/"+id+".txt")
 	document.getElementById("MC1").style="color: #000000"
 	document.getElementById("MC2").style="color: #000000"
 	} else {
-	console.log(text)
+	console.log(text.length)
 	console.log(id)
 	musicindicator(5)
 	}
