--- a/musicreaction/index.html
+++ b/musicreaction/index.html
@@ -66,11 +66,11 @@ fetch("music/"+id+".txt")
 	document.getElementById("MC1").style="color: #000000"
 	document.getElementById("MC2").style="color: #000000"
 	} else {
-	console.log(text.length)
-	console.log(id)
+	//console.log(text.length)
+	//console.log(id)
 	musicindicator(5)
 	}
-	} else if(text.length==469 && musicfinder.length==1) {
+	} else if(text.length==804 && musicfinder.length==1) {
 	musicindicator(6)
 	} else {
 	musicindicator(7)
