--- a/test/test.html
+++ b/test/test.html
@@ -159,6 +159,8 @@ var unlock = [false,false,false,false]
 var errors="<div><i>Please note that most past Basic is not implemented.</i></div>"
 var lasterror=""
 var testwallup = true
+var maxxp = 0
+var maxtp = 0
 // 10,000,000,000
 // 0: 10.00B
 // 1: 10,000M
