--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <p style="position: absolute; left: 5px; top: 40px">list of stuff:</p>
 <p style="position: absolute; left: 5px; top: 80px"><a href="/mario/index.html">Mario steals your liver (IE11, uses popups)</a></p>
 <p style="position: absolute; left: 5px; top: 120px"><a href="/Edit+/">Edit+ Playground!</a></p>
-<p style="position: absolute; left: 5px; top: 160px"><a href="/">more coming soon...</a></p>
+  <p style="position: absolute; left: 5px; top: 160px"><a href="/progress/prog2.html">Progress 2 prototype!!</a></p>
+<p style="position: absolute; left: 5px; top: 200px"><a href="/">more coming soon...</a></p>
 </body>
 </html>
